[feature] - new account model + templates

--- a/src/base/templates/base.html
+++ b/src/base/templates/base.html
@@ -41,7 +41,7 @@
             <div class="c-header__menus">
                 <nav class="c-header__nav">
                     <ul class="c-header__list">
-                        <li class="c-header__item"><a class="c-header__link" href="/">Home</a></li>
+                        <li class="c-header__item"><a class="c-header__link" href="/accounts">Accounts</a></li>
                         <li class="c-header__item"><a class="c-header__link" href="/games">Games</a></li>
                         <li class="c-header__item"><a class="c-header__link" href="/scraper">Scraper</a></li>
                     </ul>
